# salon-mgmt-app

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml
.claude/: settings.json  settings.local.json
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  confirmation_template.py  database.py  deps.py  email.py  email_layout.py  i18n.py  legacy_import.py  main.py  reminder_dispatcher.py  reminder_template.py  request_notification.py
backend/app/models/: __init__.py  appointment.py  base.py  cash_reconciliation.py  client.py  department.py  email_config.py  i18n.py  payment_method.py  payroll_config.py  promotion.py  provider.py  provider_service_price.py  retail.py  sale.py  schedule.py  service.py  staff_time_entry.py  station.py  tenant.py  time_block.py  user.py
backend/app/routers/: admin.py  appointment_requests.py  appointments.py  auth.py  briefings.py  cash_reconciliation.py  clients.py  households.py  internal.py  payment_methods.py  promotions.py  provider_service_prices.py  providers.py  public.py  reports.py  retail_items.py  sales.py  schedules.py  service_categories.py  services.py  settings.py  time_blocks.py  time_entries.py
backend/briefing_engine/: config.py  runner.py  synthesizer.py
backend/briefing_engine/delivery/: email.py  file.py  gcs.py
data/: All Bookings.txt  Client Details.txt  Future and Past Bookings.txt  On Account Summary.txt  Receipt Transactions.txt
docs/: backlog.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
infra/: cloud_run.tf  database.tf  (+7 more)
(+150 files in other folders)
